drop extension if exists "pg_net";
revoke delete on table "public"."temp" from "anon";
revoke insert on table "public"."temp" from "anon";
revoke references on table "public"."temp" from "anon";
revoke select on table "public"."temp" from "anon";
revoke trigger on table "public"."temp" from "anon";
revoke truncate on table "public"."temp" from "anon";
revoke update on table "public"."temp" from "anon";
revoke delete on table "public"."temp" from "authenticated";
revoke insert on table "public"."temp" from "authenticated";
revoke references on table "public"."temp" from "authenticated";
revoke select on table "public"."temp" from "authenticated";
revoke trigger on table "public"."temp" from "authenticated";
revoke truncate on table "public"."temp" from "authenticated";
revoke update on table "public"."temp" from "authenticated";
revoke delete on table "public"."temp" from "service_role";
revoke insert on table "public"."temp" from "service_role";
revoke references on table "public"."temp" from "service_role";
revoke select on table "public"."temp" from "service_role";
revoke trigger on table "public"."temp" from "service_role";
revoke truncate on table "public"."temp" from "service_role";
revoke update on table "public"."temp" from "service_role";
alter table "public"."temp" drop constraint "temp_pkey";
drop index if exists "public"."temp_pkey";
drop table "public"."temp";
create table "public"."destinations" (
    "id" uuid not null default gen_random_uuid(),
    "name" text not null,
    "description" text,
    "province" text not null,
    "location_name" text,
    "category" text,
    "cover_image_url" text,
    "avg_rating" numeric(2,1) default 0,
    "duration_min" integer,
    "duration_max" integer,
    "budget_min" integer,
    "budget_max" integer,
    "is_trending" boolean default false,
    "is_hidden_gem" boolean default false,
    "created_at" timestamp without time zone default now()
      );
create table "public"."itinerary_days" (
    "id" uuid not null default extensions.uuid_generate_v4(),
    "trip_id" uuid not null,
    "day_number" integer not null,
    "title" character varying,
    "created_at" timestamp without time zone default now()
      );
alter table "public"."itinerary_days" enable row level security;
create table "public"."itinerary_items" (
    "id" uuid not null default extensions.uuid_generate_v4(),
    "day_id" uuid not null,
    "time" character varying not null,
    "title" character varying not null,
    "category" character varying default 'activity'::character varying,
    "duration" character varying,
    "cost" character varying,
    "notes" text,
    "position" integer default 0,
    "created_at" timestamp without time zone default now()
      );
alter table "public"."itinerary_items" enable row level security;
create table "public"."reviews" (
    "id" uuid not null default gen_random_uuid(),
    "destination_id" uuid,
    "rating" integer,
    "created_at" timestamp without time zone default now()
      );
alter table "public"."reviews" enable row level security;
create table "public"."trips" (
    "id" uuid not null default extensions.uuid_generate_v4(),
    "title" character varying not null,
    "description" text,
    "created_at" timestamp without time zone default now()
      );
alter table "public"."trips" enable row level security;
create table "public"."user" (
    "id" bigint generated by default as identity not null,
    "created_at" timestamp with time zone not null default now(),
    "username" character varying not null default ''::character varying
      );
alter table "public"."user" enable row level security;
CREATE UNIQUE INDEX destinations_pkey ON public.destinations USING btree (id);
CREATE INDEX idx_itinerary_items_day_position ON public.itinerary_items USING btree (day_id, "position");
CREATE UNIQUE INDEX itinerary_days_pkey ON public.itinerary_days USING btree (id);
CREATE UNIQUE INDEX itinerary_items_pkey ON public.itinerary_items USING btree (id);
CREATE UNIQUE INDEX reviews_pkey ON public.reviews USING btree (id);
CREATE UNIQUE INDEX trips_pkey ON public.trips USING btree (id);
CREATE UNIQUE INDEX user_pkey ON public."user" USING btree (id);
alter table "public"."destinations" add constraint "destinations_pkey" PRIMARY KEY using index "destinations_pkey";
alter table "public"."itinerary_days" add constraint "itinerary_days_pkey" PRIMARY KEY using index "itinerary_days_pkey";
alter table "public"."itinerary_items" add constraint "itinerary_items_pkey" PRIMARY KEY using index "itinerary_items_pkey";
alter table "public"."reviews" add constraint "reviews_pkey" PRIMARY KEY using index "reviews_pkey";
alter table "public"."trips" add constraint "trips_pkey" PRIMARY KEY using index "trips_pkey";
alter table "public"."user" add constraint "user_pkey" PRIMARY KEY using index "user_pkey";
alter table "public"."itinerary_days" add constraint "itinerary_days_trip_id_fkey" FOREIGN KEY (trip_id) REFERENCES public.trips(id) ON DELETE CASCADE not valid;
alter table "public"."itinerary_days" validate constraint "itinerary_days_trip_id_fkey";
alter table "public"."itinerary_items" add constraint "itinerary_items_day_id_fkey" FOREIGN KEY (day_id) REFERENCES public.itinerary_days(id) ON DELETE CASCADE not valid;
alter table "public"."itinerary_items" validate constraint "itinerary_items_day_id_fkey";
alter table "public"."reviews" add constraint "reviews_destination_id_fkey" FOREIGN KEY (destination_id) REFERENCES public.destinations(id) ON DELETE CASCADE not valid;
alter table "public"."reviews" validate constraint "reviews_destination_id_fkey";
alter table "public"."reviews" add constraint "reviews_rating_check" CHECK (((rating >= 1) AND (rating <= 5))) not valid;
alter table "public"."reviews" validate constraint "reviews_rating_check";
set check_function_bodies = off;
CREATE OR REPLACE FUNCTION public.rls_auto_enable()
 RETURNS event_trigger
 LANGUAGE plpgsql
 SECURITY DEFINER
 SET search_path TO 'pg_catalog'
AS $function$
DECLARE
  cmd record;
BEGIN
  FOR cmd IN
    SELECT *
    FROM pg_event_trigger_ddl_commands()
    WHERE command_tag IN ('CREATE TABLE', 'CREATE TABLE AS', 'SELECT INTO')
      AND object_type IN ('table','partitioned table')
  LOOP
     IF cmd.schema_name IS NOT NULL AND cmd.schema_name IN ('public') AND cmd.schema_name NOT IN ('pg_catalog','information_schema') AND cmd.schema_name NOT LIKE 'pg_toast%' AND cmd.schema_name NOT LIKE 'pg_temp%' THEN
      BEGIN
        EXECUTE format('alter table if exists %s enable row level security', cmd.object_identity);
        RAISE LOG 'rls_auto_enable: enabled RLS on %', cmd.object_identity;
      EXCEPTION
        WHEN OTHERS THEN
          RAISE LOG 'rls_auto_enable: failed to enable RLS on %', cmd.object_identity;
      END;
     ELSE
        RAISE LOG 'rls_auto_enable: skip % (either system schema or not in enforced list: %.)', cmd.object_identity, cmd.schema_name;
     END IF;
  END LOOP;
END;
$function$;
grant delete on table "public"."destinations" to "anon";
grant insert on table "public"."destinations" to "anon";
grant references on table "public"."destinations" to "anon";
grant select on table "public"."destinations" to "anon";
grant trigger on table "public"."destinations" to "anon";
grant truncate on table "public"."destinations" to "anon";
grant update on table "public"."destinations" to "anon";
grant delete on table "public"."destinations" to "authenticated";
grant insert on table "public"."destinations" to "authenticated";
grant references on table "public"."destinations" to "authenticated";
grant select on table "public"."destinations" to "authenticated";
grant trigger on table "public"."destinations" to "authenticated";
grant truncate on table "public"."destinations" to "authenticated";
grant update on table "public"."destinations" to "authenticated";
grant delete on table "public"."destinations" to "service_role";
grant insert on table "public"."destinations" to "service_role";
grant references on table "public"."destinations" to "service_role";
grant select on table "public"."destinations" to "service_role";
grant trigger on table "public"."destinations" to "service_role";
grant truncate on table "public"."destinations" to "service_role";
grant update on table "public"."destinations" to "service_role";
grant delete on table "public"."itinerary_days" to "anon";
grant insert on table "public"."itinerary_days" to "anon";
grant references on table "public"."itinerary_days" to "anon";
grant select on table "public"."itinerary_days" to "anon";
grant trigger on table "public"."itinerary_days" to "anon";
grant truncate on table "public"."itinerary_days" to "anon";
grant update on table "public"."itinerary_days" to "anon";
grant delete on table "public"."itinerary_days" to "authenticated";
grant insert on table "public"."itinerary_days" to "authenticated";
grant references on table "public"."itinerary_days" to "authenticated";
grant select on table "public"."itinerary_days" to "authenticated";
grant trigger on table "public"."itinerary_days" to "authenticated";
grant truncate on table "public"."itinerary_days" to "authenticated";
grant update on table "public"."itinerary_days" to "authenticated";
grant delete on table "public"."itinerary_days" to "service_role";
grant insert on table "public"."itinerary_days" to "service_role";
grant references on table "public"."itinerary_days" to "service_role";
grant select on table "public"."itinerary_days" to "service_role";
grant trigger on table "public"."itinerary_days" to "service_role";
grant truncate on table "public"."itinerary_days" to "service_role";
grant update on table "public"."itinerary_days" to "service_role";
grant delete on table "public"."itinerary_items" to "anon";
grant insert on table "public"."itinerary_items" to "anon";
grant references on table "public"."itinerary_items" to "anon";
grant select on table "public"."itinerary_items" to "anon";
grant trigger on table "public"."itinerary_items" to "anon";
grant truncate on table "public"."itinerary_items" to "anon";
grant update on table "public"."itinerary_items" to "anon";
grant delete on table "public"."itinerary_items" to "authenticated";
grant insert on table "public"."itinerary_items" to "authenticated";
grant references on table "public"."itinerary_items" to "authenticated";
grant select on table "public"."itinerary_items" to "authenticated";
grant trigger on table "public"."itinerary_items" to "authenticated";
grant truncate on table "public"."itinerary_items" to "authenticated";
grant update on table "public"."itinerary_items" to "authenticated";
grant delete on table "public"."itinerary_items" to "service_role";
grant insert on table "public"."itinerary_items" to "service_role";
grant references on table "public"."itinerary_items" to "service_role";
grant select on table "public"."itinerary_items" to "service_role";
grant trigger on table "public"."itinerary_items" to "service_role";
grant truncate on table "public"."itinerary_items" to "service_role";
grant update on table "public"."itinerary_items" to "service_role";
grant delete on table "public"."reviews" to "anon";
grant insert on table "public"."reviews" to "anon";
grant references on table "public"."reviews" to "anon";
grant select on table "public"."reviews" to "anon";
grant trigger on table "public"."reviews" to "anon";
grant truncate on table "public"."reviews" to "anon";
grant update on table "public"."reviews" to "anon";
grant delete on table "public"."reviews" to "authenticated";
grant insert on table "public"."reviews" to "authenticated";
grant references on table "public"."reviews" to "authenticated";
grant select on table "public"."reviews" to "authenticated";
grant trigger on table "public"."reviews" to "authenticated";
grant truncate on table "public"."reviews" to "authenticated";
grant update on table "public"."reviews" to "authenticated";
grant delete on table "public"."reviews" to "service_role";
grant insert on table "public"."reviews" to "service_role";
grant references on table "public"."reviews" to "service_role";
grant select on table "public"."reviews" to "service_role";
grant trigger on table "public"."reviews" to "service_role";
grant truncate on table "public"."reviews" to "service_role";
grant update on table "public"."reviews" to "service_role";
grant delete on table "public"."trips" to "anon";
grant insert on table "public"."trips" to "anon";
grant references on table "public"."trips" to "anon";
grant select on table "public"."trips" to "anon";
grant trigger on table "public"."trips" to "anon";
grant truncate on table "public"."trips" to "anon";
grant update on table "public"."trips" to "anon";
grant delete on table "public"."trips" to "authenticated";
grant insert on table "public"."trips" to "authenticated";
grant references on table "public"."trips" to "authenticated";
grant select on table "public"."trips" to "authenticated";
grant trigger on table "public"."trips" to "authenticated";
grant truncate on table "public"."trips" to "authenticated";
grant update on table "public"."trips" to "authenticated";
grant delete on table "public"."trips" to "service_role";
grant insert on table "public"."trips" to "service_role";
grant references on table "public"."trips" to "service_role";
grant select on table "public"."trips" to "service_role";
grant trigger on table "public"."trips" to "service_role";
grant truncate on table "public"."trips" to "service_role";
grant update on table "public"."trips" to "service_role";
grant delete on table "public"."user" to "anon";
grant insert on table "public"."user" to "anon";
grant references on table "public"."user" to "anon";
grant select on table "public"."user" to "anon";
grant trigger on table "public"."user" to "anon";
grant truncate on table "public"."user" to "anon";
grant update on table "public"."user" to "anon";
grant delete on table "public"."user" to "authenticated";
grant insert on table "public"."user" to "authenticated";
grant references on table "public"."user" to "authenticated";
grant select on table "public"."user" to "authenticated";
grant trigger on table "public"."user" to "authenticated";
grant truncate on table "public"."user" to "authenticated";
grant update on table "public"."user" to "authenticated";
grant delete on table "public"."user" to "service_role";
grant insert on table "public"."user" to "service_role";
grant references on table "public"."user" to "service_role";
grant select on table "public"."user" to "service_role";
grant trigger on table "public"."user" to "service_role";
grant truncate on table "public"."user" to "service_role";
grant update on table "public"."user" to "service_role";
create policy "Allow insert for everyone"
  on "public"."destinations"
  as permissive
  for insert
  to public
with check (true);
